--- a/css/styles.css
+++ b/css/styles.css
@@ -129,7 +129,7 @@ header hr {
     margin-top: 10px;
     padding: 0 10px 0 10px;
     width: 100%;
-    height: 500px;
+    height: 75vh;
 }
 
 .grid-row {
@@ -291,7 +291,7 @@ header hr {
 
 @keyframes toRoad {
     from {
-        background-color: white;
+        background-color: rgba(105, 13, 130, 0.2);
     }
     to {
         background-color: rgba(105, 13, 130, 0.5);
